tests/sema/fail/v31_fail_cptr_str.ep
# COMPILE_FAIL_CONTAINS: cptr expected scalar/ptr array or FFI-safe struct, got str
fun main(): void {
    let p = cptr("Epic")
}
